--- a/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.2.html
+++ b/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.2.html
@@ -61,7 +61,7 @@
         
         //Por selectores css
         
-        $(".dentro a").click(()=>alert("xxxxxxxxxxxxxxxxx"));
+        $(".dentro a").click(()=>alert("a es descendiente de la clase dentro"));
 
     });
 
