Un poco más hoy

--- a/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.3.html
+++ b/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.3.html
@@ -38,12 +38,32 @@
        <img src="" alt=""> 
     </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-8">
+    <div class="row ">
+        <div class="col-6">
             <button id="au" class="btn btn-primary">Aumentar</button>
             <button id="di" class="btn btn-success">Diminuir</button>
             <button id="in" class="btn btn-info">Intercambio</button>
-            <div class="bg-dark text-white mt-2">
+            <div id="parrafo" class="bg-dark text-white mt-2">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, quae placeat magni numquam eum expedita nesciunt et impedit sequi eligendi!
+            </div>
+            <div>
+                <input type="text">
+                <h1 id="contenido"></h1>
+            </div>
+            <form >
+                
+                <input class="form-control" id="nombre" type="text">
+                <button id="btA" class="btn btn-info" type="submit" >Añadir</button>
+            </form>
+            <ul id="lista">
+                
+            </ul>
+        </div>
+        <div class="col-6">
+            <button id="au1" class="btn btn-primary">Desaparecer</button>
+            <button id="di1" class="btn btn-success">Diminuir</button>
+            <button id="in1" class="btn btn-info">Intercambio</button>
+            <div id="parrafo1" class="bg-dark text-white mt-2">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, quae placeat magni numquam eum expedita nesciunt et impedit sequi eligendi!
             </div>
         </div>
