--- a/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.3.html
+++ b/DIW/ut04 JQuery contenidos interactivos/ejemplos/ejemplo1.3.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col-6">
             
-            <div id="cuado_move" class="cuadrado2 bg-danger mb-2"></div>
+            <div id="cuado_move" class="cuadrado2 bg-danger mb-2">hola</div>
             <button id="bMove" class="btn btn-info">Animar</button>
         </div>
     </div>
