--- a/DIW/ut03 Contenidos multimedia/ejemplos/ficheros.html
+++ b/DIW/ut03 Contenidos multimedia/ejemplos/ficheros.html
@@ -56,6 +56,7 @@
                 var dataURL = reader.result;
                 var Eimagen = document.getElementById('imagen');
                 Eimagen.src = dataURL;
+                alert(dataURL);
             };
             reader.readAsDataURL(files[0]);
             
