--- a/DIW/ut03 Contenidos multimedia/ejemplos/canvasEjemplo2.html
+++ b/DIW/ut03 Contenidos multimedia/ejemplos/canvasEjemplo2.html
@@ -13,6 +13,6 @@
    </div>
     
     <script src="js/canvasb.js"></script>
-    <script src="js/canvas.js"></script>
+    <script src="js/canvas2.js"></script>
 </body>
 </html>
