--- a/DWC/UT10 AJAX/ejemplos/ajaxclase4.html
+++ b/DWC/UT10 AJAX/ejemplos/ajaxclase4.html
@@ -28,6 +28,7 @@
             .catch(function(error){
                 capaError.innerHTML=err;
         });
+        document.querySelector('p').textContent="Pepe";
     </script>
 </body>
 </html>
