--- a/DIW/ut04 JQuery contenidos interactivos/ejemplos/ajaxjquery.html
+++ b/DIW/ut04 JQuery contenidos interactivos/ejemplos/ajaxjquery.html
@@ -13,18 +13,31 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         $(document).ready(function(){
-            $("button").click(function(){
-                
-                $.get("https://source.unsplash.com/random", function(data, status){
-                   var imagen =new Image();
-                   var img=data.blob();
-                });
+            $("button").click(function(){ 
+                jQuery.ajax({
+                url:'https://images.unsplash.com/ranphoto-1465101108990-e5eac17cf76d?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ%3D%3D&s=471ae675a6140db97fea32b55781479e',
+                cache:false,
+                    xhr:function(){// Seems like the only way to get access to the xhr object
+                var xhr = new XMLHttpRequest();
+                xhr.responseType= 'blob'
+                return xhr;
+            },
+            success: function(data){
+            var img = document.getElementById('img');
+            var url = window.URL || window.webkitURL;
+            img.src = url.createObjectURL(data);
+        },
+        error:function(){
+            
+        }
+    });
             });
         });
     </script>
 </head>
 <body>
     <button>Aquí</button>
+    <img src="" alt="">
 
 </body>
 
