--- a/DIW/ut04 JQuery contenidos interactivos/ejemplos/ajaxjquery.html
+++ b/DIW/ut04 JQuery contenidos interactivos/ejemplos/ajaxjquery.html
@@ -1,46 +1,24 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jQuery UI Droppable - Default functionality</title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    
-    <style>
-    </style>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-        $(document).ready(function(){
-            $("button").click(function(){ 
-                jQuery.ajax({
-                url:'https://images.unsplash.com/ranphoto-1465101108990-e5eac17cf76d?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ%3D%3D&s=471ae675a6140db97fea32b55781479e',
-                cache:false,
-                    xhr:function(){// Seems like the only way to get access to the xhr object
-                var xhr = new XMLHttpRequest();
-                xhr.responseType= 'blob'
-                return xhr;
-            },
-            success: function(data){
-            var img = document.getElementById('img');
-            var url = window.URL || window.webkitURL;
-            img.src = url.createObjectURL(data);
-        },
-        error:function(){
-            
-        }
-    });
-            });
-        });
-    </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $.ajax({url: "https://jorgesanchez.net/servicios/poesia.php",  success: function(result){
+      $("div").html(result);
+    }});
+  });
+});
+</script>
 </head>
 <body>
-    <button>Aquí</button>
-    <img src="" alt="">
+
+<div><h2>Let AJAX change this text</h2></div>
+
+<button>Change Content</button>
 
 </body>
-
 </html>
 
 
