--- a/tresenraya/index.html
+++ b/tresenraya/index.html
@@ -33,11 +33,11 @@
                 <form>
                     <div class="form-group">
                         <label for="jugador1" class="col-form-label">Jugador 1:</label>
-                        <input type="text" class="form-control" id="jugador1" value="Jugador1" required="true" >
+                        <input type="text" class="form-control" maxlength="10"  id="jugador1" value="Jugador1" required="true" >
                     </div>
                     <div class="form-group">
                         <label for="jugador2" class="col-form-label">Jugador 2:</label>
-                        <input type="text" class="form-control" id="jugador2" value="Jugador2" required>
+                        <input type="text" class="form-control" maxlength="10" id="jugador2" value="Jugador2" required>
                     </div>
                 </form>
             </div>
@@ -66,36 +66,36 @@
         <div class="col-sm-3  jugador1">
             <div class="alert alert-danger" role="alert" id="Jugador1">Jugador 1</div>
                 <div class="border border-warning rounded">
-                    <img src="img/roja.png"  class="m-2 w-25 azul">
-                    <img src="img/roja.png"  class="m-2 w-25 azul">
-                    <img src="img/roja.png"  class="m-2 w-25 azul">
-                    <img src="img/roja.png"  class="m-2 w-25 azul">
+                    <img src="img/roja.png"  class="m-2 w-25 roja">
+                    <img src="img/roja.png"  class="m-2 w-25 roja">
+                    <img src="img/roja.png"  class="m-2 w-25 roja">
+                    <img src="img/roja.png"  class="m-2 w-25 roja">
                 </div>
         </div>
         <div class="col-sm-6  border border-warning rounded tablero">
             <div class="row ">
                 <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
             </div>
             <div class="row">
-                <div class="col-4  border border-warning rounded casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
             </div>
             <div class="row">
-                <div class="col-4  border border-warning rounded casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
-                <div class="col-4  border border-warning rounded casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
+                <div class="col-4  border border-warning rounded d-flex justify-content-center align-items-center casillas"></div>
             </div>
         </div>
         <div class="col-sm-3  rounded jugador2">
             <div class="alert alert-danger" role="alert" id="Jugador2">Jugador 2</div>
             <div class="border border-warning rounded">
-                <img src="img/azul.png"  class="m-2 w-25 roja">
-                <img src="img/azul.png"  class="m-2 w-25 roja ">
-                <img src="img/azul.png"  class="m-2 w-25 roja ">
-                <img src="img/azul.png"  class="m-2 w-25 roja ">
+                <img src="img/azul.png"  class="m-2 w-25 azul">
+                <img src="img/azul.png"  class="m-2 w-25 azul ">
+                <img src="img/azul.png"  class="m-2 w-25 azul ">
+                <img src="img/azul.png"  class="m-2 w-25 azul ">
             </div>
         </div>
     </div>
